# webapp

./: .clang-format  CMakeLists.txt  README.md
cmake/: app_icon.icns
src/: main.cpp
src/core/: WebApp.cpp  WebApp.hpp
src/screens/: main.html
